tweaks to nav items and footer prepping for css

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <title>Places I've Worked</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Slab" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -10,20 +12,16 @@
                 <h1>Places I've Worked</h1>
             </div>
         </div>
-        <div class="nav-outer-content-wrapper">
-            <div class="nav-content-wrapper">
-                <div class="nav-inner-content-wrapper">
-                    <nav>
-                        <ul>
-                            <li><a href="#university">University of Missouri</a></li>
-                            <li><a href="#mccord">McCord Design Group</a></li>
-                            <li><a href="#tgp">The Growth Partnership</a></li>
-                            <li><a href="#elliemae">EllieMae</a></li>
-                            <li><a href="#teeturtle">TeeTurtle</a></li>
-                        </ul>
-                    </nav>
-                </div>
-            </div>
+        <div class="nav-content-wrapper">
+            <nav>
+                <ul>
+                    <li><a href="#university">University of Missouri</a></li>
+                    <li><a href="#mccord">McCord Design Group</a></li>
+                    <li><a href="#tgp">The Growth Partnership</a></li>
+                    <li><a href="#elliemae">EllieMae</a></li>
+                    <li><a href="#teeturtle">TeeTurtle</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
     <main>
@@ -92,7 +90,7 @@
         <div class="footer-outer-content-wrapper">
             <div class="footer-content-wrapper">
                 <div class="footer-inner-content-wrapper">
-                    <p>&copy; John Malley</p>
+                    <p>&copy; John Malley <br> <a href="https://www.jpmalley.com">www.jpmalley.com</a></p>
                 </div>
             </div>
         </div>
