--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div class="header-content-wrapper">
             <h1>Places I've Worked</h1>
         </div>
-        <div class="nav-content-wrapper">
+        <div id="nav" class="nav-content-wrapper">
             <nav>
                 <ul>
                     <li><a href="#university">University of Missouri</a></li>
